# Virtual-Vehicle-OS

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  build_output.txt  package-lock.json
build-linux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  demo_service  logger_format_test  posix_message_queue_test  retry_policy_test  thread_pool_test
build-linux/Testing/Temporary/: CTestCostData.txt
build-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  VehicleRobotBaseFramework.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  commonsvc_log.vcxproj  commonsvc_log.vcxproj.filters  interconnect_backpressure_test.vcxproj  interconnect_backpressure_test.vcxproj.filters  interconnect_codec_test.vcxproj  interconnect_codec_test.vcxproj.filters  interconnect_config_provider_test.vcxproj  interconnect_config_provider_test.vcxproj.filters  interconnect_metrics_delta_test.vcxproj  interconnect_metrics_delta_test.vcxproj.filters  interconnect_router_exception_test.vcxproj  interconnect_router_exception_test.vcxproj.filters  interconnect_ttl_test.vcxproj  interconnect_ttl_test.vcxproj.filters  logger_format_test.vcxproj  logger_format_test.vcxproj.filters  retry_policy_test.vcxproj  retry_policy_test.vcxproj.filters  thread_pool_test.vcxproj  thread_pool_test.vcxproj.filters  vr_base_framework.vcxproj  vr_base_framework.vcxproj.filters  vr_error_code.vcxproj  vr_error_code.vcxproj.filters
build-win/Debug/: commonsvc_log.lib  vr_base_framework.lib  vr_error_code.lib
build-win/Testing/Temporary/: CTestCostData.txt
build-win/commonsvc_log.dir/Debug/commonsvc_log.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-win/interconnect_backpressure_test.dir/Debug/: interconnect_backpressure_test.exe.recipe  interconnect_backpressure_test.ilk
build-win/interconnect_backpressure_test.dir/Debug/intercon.02B8D119.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-win/interconnect_codec_test.dir/Debug/: interconnect_codec_test.exe.recipe  interconnect_codec_test.ilk
build-win/interconnect_codec_test.dir/Debug/intercon.3CD18C90.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-win/interconnect_config_provider_test.dir/Debug/: interconnect_config_provider_test.exe.recipe  interconnect_config_provider_test.ilk
build-win/interconnect_metrics_delta_test.dir/Debug/: interconnect_metrics_delta_test.exe.recipe  interconnect_metrics_delta_test.ilk
build-win/interconnect_router_exception_test.dir/Debug/: interconnect_router_exception_test.exe.recipe  interconnect_router_exception_test.ilk
build-win/interconnect_ttl_test.dir/Debug/: interconnect_ttl_test.exe.recipe  interconnect_ttl_test.ilk
build-win/logger_format_test.dir/Debug/: logger_format_test.exe.recipe  logger_format_test.ilk
build-win/retry_policy_test.dir/Debug/: retry_policy_test.exe.recipe  retry_policy_test.ilk
build-win/thread_pool_test.dir/Debug/: thread_pool_test.exe.recipe  thread_pool_test.ilk
build-win/vr_error_code.dir/Debug/: vr_error_code.lib.recipe
cmake/toolchains/: stm32f429.cmake
demo/: benchmark_report_template.md  interconnect_benchmark_driver.cpp  interconnect_learning_demo.cpp  main.cpp  ros2_adapter_sample.cpp  ros2_adapter_stub.cpp  rtos_adapter_sample.cpp  rtos_adapter_stub.cpp
docs/: platform_integration_v08.md
platform/stm32f429/: STM32F429ZGTX_FLASH.ld  f429_bridge_diag_adapter.cpp  f429_bridge_diag_adapter.hpp  main_min.cpp  startup_stm32f429xx_min.c  stm32f429_hal_min.c  stm32f429_hal_min.h  system_stm32f429_min.c  uart_log_min.c  uart_log_min.h
src/core/: error_code.cpp  error_code.hpp  process_guardian.cpp  process_guardian.hpp  retry_policy.cpp  retry_policy.hpp  thread_pool.cpp  thread_pool.hpp
src/interconnect/: bridge_metrics.hpp  bridge_policy.hpp  config_provider.hpp  diagnostics_manager.cpp  diagnostics_manager.hpp  diagnostics_reporter.hpp  interconnect_bridge.cpp  interconnect_bridge.hpp  message_authenticator.hpp  message_codec.cpp  message_codec.hpp  message_envelope.hpp  message_protocol_adapter.cpp  message_protocol_adapter.hpp  message_router.cpp  message_router.hpp  policy_manager.cpp  policy_manager.hpp  posix_mq_transport.cpp  posix_mq_transport.hpp  protocol_manager.cpp  protocol_manager.hpp  static_config_provider.hpp  system_metrics_aggregator.hpp  tcp_transport.cpp  tcp_transport.hpp  transport.hpp  transport_orchestrator.cpp  transport_orchestrator.hpp
src/ipc/: posix_message_queue.cpp  posix_message_queue.hpp
src/log/: logger.cpp  logger.hpp
src/osal/: osal_event.hpp  osal_mutex.hpp  osal_time.hpp
tests/: thread_pool_test.cpp
tests/core/: retry_policy_test.cpp
tests/interconnect/: interconnect_backpressure_test.cpp  interconnect_codec_test.cpp  interconnect_config_provider_test.cpp  interconnect_config_reload_test.cpp  interconnect_fault_injection_test.cpp  interconnect_metrics_delta_test.cpp  interconnect_policy_matrix_test.cpp  interconnect_protocol_adapter_test.cpp  interconnect_router_exception_test.cpp  interconnect_tcp_loopback_test.cpp  interconnect_transport_consistency_test.cpp  interconnect_ttl_test.cpp  transport_orchestrator_test.cpp
tests/ipc/: posix_message_queue_test.cpp
tests/log/: logger_format_test.cpp
tests/platform/: f429_bridge_diag_adapter_test.cpp  ros2_adapter_stub_test.cpp  rtos_adapter_stub_test.cpp
tools/: benchmark_baseline.json  flash_stm32f429_stlink_v2.ps1  generate_v07_audit_report.ps1  quality_gate_template.txt  release_gate_v07.ps1  release_gate_v09.ps1  run_quality_gate.ps1
文件解析目录/: .$Virtual-Vehicle-OS架构设计图示.drawio.bkp  Virtual-Vehicle-OS架构设计图示.drawio  interconnect_bridge.cpp实现逻辑解析.txt  main.cpp解析.txt  powershell编译运行指令.md  v0.5可执行任务清单.txt  排障快速定位逻辑.txt  项目详解总览.txt
(+78 files in other folders)
